--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://bankdata.store/" />
   <meta name="google-site-verification" content="vCKi-MB9iWmbXzsX4G7E-aI-jvOHrdf6uojJT8iLSIs" />
   <meta name="google-site-verification" content="HBG7SaS-DmFFiYnfI-vT2LOdw3gM2AK3wbmnixc4zR8" />
-
+<meta name="google-site-verification" content="jyZYfN_ru9N1Z85t8TmRZtFgghYu6OmH3FnL4nuyDDM" />
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="BankData Store | Blogger 2.0 Data Portal" />
